fix: Add `<br />` support

--- a/config.yaml
+++ b/config.yaml
@@ -2,3 +2,7 @@ baseURL: /
 languageCode: en-us
 title: Felicitas Pojtinger
 relativeURLs: true
+markup:
+  goldmark:
+    renderer:
+      hardWraps: true
