--- a/data/links.yaml
+++ b/data/links.yaml
@@ -8,8 +8,8 @@ navbar:
 cta:
   title: Follow on Bluesky
   icon: fas fa-plus-circle
-  link: https://bsky.app/profile/felicitas.pojtinger.com
-socials: 
+  link: https://staging.bsky.app/profile/felicitas.pojtinger.com
+socials:
   - title: Twitter
     link: https://twitter.com/pojntfx
   - title: Instagram
