--- a/data/projects.yaml
+++ b/data/projects.yaml
@@ -8,6 +8,9 @@
       icon: true
     - slug: pojntfx/stfs
       background: var(--pf-global--palette--blue-400)
+    - slug: pojntfx/tapisk
+      background: var(--pf-global--palette--light-green-700)
+      icon: true
     - slug: pojntfx/liwasc
       background: var(--pf-global--palette--cyan-500)
     - slug: pojntfx/bofied
@@ -107,6 +110,7 @@
   projects:
     - slug: pojntfx/deliverance
       background: var(--pf-global--palette--black-850)
+      icon: true
     - slug: pojntfx/minitel
       background: var(--pf-global--palette--blue-400)
     - slug: pojntfx/box
