--- a/data/links.yaml
+++ b/data/links.yaml
@@ -6,12 +6,10 @@ navbar:
     link: https://docs.google.com/document/d/1pT-rogZHC3DVQ41mTFAqCOAcMhh4PDolzqSgqNN2JWk/edit?usp=sharing
     newTab: true
 cta:
-  title: Follow on Bluesky
+  title: Follow on Mastodon
   icon: fas fa-plus-circle
-  link: https://bsky.app/profile/felicitas.pojtinger.com
+  link: https://mastodon.social/@pojntfx
 socials:
-  - title: Mastodon
-    link: https://mastodon.social/@pojntfx
   - title: Twitter
     link: https://twitter.com/pojntfx
   - title: Instagram
@@ -20,6 +18,8 @@ socials:
     link: https://www.linkedin.com/in/pojntfx/
   - title: Threads
     link: https://www.threads.net/@pojntfx 
+  - title: Bluesky
+    link: https://bsky.app/profile/felicitas.pojtinger.com
   - separator: true
   - title: Matrix
     link: https://matrix.to/#/@pojntfx:matrix.org
