--- a/data/links.yaml
+++ b/data/links.yaml
@@ -3,7 +3,7 @@ me:
 navbar:
   - title: CV
     icon: fas fa-book
-    link: https://docs.google.com/document/d/1pT-rogZHC3DVQ41mTFAqCOAcMhh4PDolzqSgqNN2JWk/edit?usp=sharing
+    link: /doc/cv.pdf
     newTab: true
 cta:
   title: Follow on Mastodon
