--- a/.github/workflows/hydrun.yaml
+++ b/.github/workflows/hydrun.yaml
@@ -3,71 +3,106 @@ name: hydrun CI
 on:
   push:
   pull_request:
-
-permissions:
-  contents: write
+  schedule:
+    - cron: "0 0 * * 0"
 
 jobs:
   build-linux:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.target.runner }}
+    permissions:
+      contents: read
     strategy:
       matrix:
         target:
-          - id: go-ps-api
+          # Tests
+          - id: test
             src: .
-            os: golang:bullseye
-            flags: ""
+            os: golang:bookworm
+            flags: -e '-v /tmp/ccache:/root/.cache/go-build'
+            cmd: GOFLAGS="-short" ./Hydrunfile test
+            dst: out/nonexistent
+            runner: ubuntu-latest
+
+          # Binaries
+          - id: go.ps-api
+            src: .
+            os: golang:bookworm
+            flags: -e '-v /tmp/ccache:/root/.cache/go-build'
             cmd: ./Hydrunfile go ps-api
             dst: out/*
-          - id: go-ps-gen-projects
+            runner: ubuntu-latest
+          - id: go.ps-gen-projects
             src: .
-            os: golang:bullseye
-            flags: ""
+            os: golang:bookworm
+            flags: -e '-v /tmp/ccache:/root/.cache/go-build'
             cmd: ./Hydrunfile go ps-gen-projects
             dst: out/*
-          - id: go-ps-proxy
+            runner: ubuntu-latest
+          - id: go.ps-proxy
             src: .
-            os: golang:bullseye
-            flags: ""
+            os: golang:bookworm
+            flags: -e '-v /tmp/ccache:/root/.cache/go-build'
             cmd: ./Hydrunfile go ps-proxy
             dst: out/*
+            runner: ubuntu-latest
           - id: pwa
             src: .
             os: golang:alpine
-            flags: ""
+            flags: -e '-v /tmp/ccache:/root/.cache/go-build'
             cmd: ./Hydrunfile pwa
             dst: out/*
+            runner: ubuntu-latest
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+      - name: Restore ccache
+        uses: actions/cache/restore@v4
+        with:
+          path: |
+            /tmp/ccache
+          key: cache-ccache-${{ matrix.target.id }}
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v3
       - name: Set up hydrun
         run: |
           curl -L -o /tmp/hydrun "https://github.com/pojntfx/hydrun/releases/latest/download/hydrun.linux-$(uname -m)"
           sudo install /tmp/hydrun /usr/local/bin
       - name: Build with hydrun
         working-directory: ${{ matrix.target.src }}
-        run: hydrun -o ${{ matrix.target.os }} ${{ matrix.target.flags }} "GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} ${{ matrix.target.cmd }}"
+        run: hydrun -o ${{ matrix.target.os }} ${{ matrix.target.flags }} "${{ matrix.target.cmd }}"
       - name: Fix permissions for output
         run: sudo chown -R $USER .
+      - name: Save ccache
+        uses: actions/cache/save@v4
+        with:
+          path: |
+            /tmp/ccache
+          key: cache-ccache-${{ matrix.target.id }}
       - name: Upload output
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.target.id }}
           path: ${{ matrix.target.dst }}
+
   publish-linux:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pages: write
+      id-token: write
     needs: build-linux
+    environment:
+      name: github-pages
+      url: ${{ steps.publish.outputs.page_url }}
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Download output
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v4
         with:
           path: /tmp/out
       - name: Isolate the repositories
@@ -75,28 +110,30 @@ jobs:
           mkdir -p /tmp/github-pages
           tar xvzf /tmp/out/pwa/*.tar.gz -C /tmp/github-pages
           touch /tmp/github-pages/.nojekyll
+      - name: Extract branch name
+        id: extract_branch
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
       - name: Publish pre-release to GitHub releases
         if: ${{ github.ref == 'refs/heads/main' }}
-        uses: marvinpinto/action-automatic-releases@latest
+        uses: softprops/action-gh-release@v2
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: unstable
+          tag_name: release-${{ steps.extract_branch.outputs.branch }}
           prerelease: true
           files: |
             /tmp/out/*/*
       - name: Publish release to GitHub releases
         if: startsWith(github.ref, 'refs/tags/v')
-        uses: marvinpinto/action-automatic-releases@latest
+        uses: softprops/action-gh-release@v2
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
           files: |
             /tmp/out/*/*
-      - name: Publish release to GitHub pages
-        if: startsWith(github.ref, 'refs/tags/v')
-        uses: JamesIves/github-pages-deploy-action@4.1.0
+      - name: Setup GitHub Pages
+        uses: actions/configure-pages@v5
+      - name: Upload GitHub Pages artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          branch: gh-pages
-          folder: /tmp/github-pages
-          git-config-name: GitHub Pages Bot
-          git-config-email: bot@example.com
+          path: /tmp/github-pages/
+      - name: Publish to GitHub pages
+        id: publish
+        uses: actions/deploy-pages@v4
