--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
   },
   "homepage": "https://github.com/pojntfx/felicitas.pojtinger.com#readme",
   "dependencies": {
-    "@fireworks-js/web": "^2.10.0",
-    "@fontsource/lato": "^4.5.1",
-    "@patternfly/patternfly": "^6.0.0-alpha.165",
-    "magic-snowflakes": "^6.0.1"
+    "@fireworks-js/web": "^2.10.8",
+    "@fontsource/lato": "^4.5.10",
+    "@patternfly/patternfly": "^6.0.0",
+    "magic-snowflakes": "^6.3.0"
   },
   "devDependencies": {
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.8",
     "prettier-plugin-go-template": "^0.0.13"
   }
 }
