--- a/data/person.yaml
+++ b/data/person.yaml
@@ -1,4 +1,4 @@
 name: Felicitas Pojtinger 🌅
 pronouns: she/her
-description: 💻 Go & JS Developer
+description: Developer building digital infrastructure ✨
 img: https://github.com/pojntfx.png
