chore: Bump CV and personal description
Signed-off-by: Felicitas Pojtinger <felicitas@pojtinger.com>

--- a/data/person.yaml
+++ b/data/person.yaml
@@ -1,4 +1,4 @@
-name: Felicitas Pojtinger 🌅
+name: Felicitas Pojtinger
 pronouns: she/her
-description: Developer building digital infrastructure ✨
+description: Building digital infrastructure that lasts
 img: https://github.com/pojntfx.png
