--- a/forges.yaml
+++ b/forges.yaml
@@ -2,9 +2,9 @@
   type: github
   api: https://api.github.com/
   cdn: https://raw.githubusercontent.com/
-  emoji: 🐙
+  icon: fab fa-github
 - domain: codeberg.org
   type: forgejo
   api: https://codeberg.org/
   cdn: https://codeberg.org/
-  emoji: 🏔️
+  icon: fab fa-git-square
