--- a/data/links.yaml
+++ b/data/links.yaml
@@ -10,6 +10,11 @@ cta:
   icon: fas fa-plus-circle
   link: https://mastodon.social/@pojntfx
 socials:
+  - title: GitHub
+    link: https://github.com/pojntfx/
+  - title: Codeberg
+    link: https://codeberg.org/pojntfx
+  - separator: true
   - title: Bluesky
     link: https://bsky.app/profile/felicitas.pojtinger.com
   - title: Twitter
@@ -18,10 +23,6 @@ socials:
     link: https://www.instagram.com/pojntfx/
   - title: LinkedIn
     link: https://www.linkedin.com/in/pojntfx/
-  - title: Threads
-    link: https://www.threads.net/@pojntfx
-  - title: Bluesky
-    link: https://bsky.app/profile/felicitas.pojtinger.com
   - separator: true
   - title: Matrix
     link: https://matrix.to/#/@pojntfx:matrix.org
