fix: Prevent import cycle for forges data embed
Signed-off-by: Felicitas Pojtinger <felicitas@pojtinger.com>

--- a/config.yaml
+++ b/config.yaml
@@ -2,6 +2,8 @@ baseURL: /
 languageCode: en-us
 title: Felicitas Pojtinger
 relativeURLs: true
+ignoreFiles:
+  - "data/index\\.go$"
 markup:
   goldmark:
     renderer:
